# poly-standalone

./: CMakeLists.txt  Driver.cpp  README.md
include/Poly/: Poly.hpp
